--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 *{
-    margin: 0%;
-    padding: 0%;
+    margin: 0px;
+    padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -19,6 +19,7 @@ body{
 }
 
 main{
+    position: relative;
     height: 100vh;
 }
 
@@ -29,16 +30,28 @@ main{
 }
 
 section#telefone{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
     height: 627px;
     width: 311px;
-    background: url(../imagens/frame-iphone.png);
-    background-repeat: no-repeat;
+    background: url(../imagens/frame-iphone.png) no-repeat;
 }
 
 iframe#tela{
     position: relative;
     top: 80px;
     left: 22px;
-    width: 264px;
-    height: 467px;
+    width: 269px;
+    height: 471px;
+}
+
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.735);
+    float: right;
 }
